Updating comments and removing unused methods; also adding exception test cases